# H-gripe-proxy

./: .gitignore  ANTI_BAN_STRATEGY_ANALYSIS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_OPTIMIZATION_ROADMAP.md  BUILD_AND_RELEASE_GUIDE.md  BUILD_FIX_WORKER_PATHS.md  BUILD_SUCCESS_SUMMARY.md  CARD_LAYOUT_REFACTOR_COMPLETE.md  CLEANUP_CHECKLIST.md  COMPILATION_ERRORS_FIXED.md  COMPONENT_REFACTOR_GUIDE.md  COMPONENT_REFACTOR_ROADMAP.md  COMPONENT_RESPONSIBILITY_ANALYSIS.md  CROSS_PLATFORM_BUILD_GUIDE.md  CSP_FIX.md  CURRENT_FIX_STATUS.md  CURRENT_PROXY_CARD_REFACTOR_COMPLETE.md  Cargo.toml  Changelog.md  DNS_BACKEND_INTEGRATION_COMPLETE.md  DNS_CONFIG_REFACTOR_COMPLETE.md  DNS_CONFIG_REFACTOR_PLAN.md  DNS_OPTIMIZATION_PROJECT_SUMMARY.md  DNS_QUICK_REFERENCE.md  DNS_SMART_ROUTING_TOR_COMPLETE.md  DNS_STABILITY_OPTIMIZATION_PHASE1_COMPLETE.md  DNS_STABILITY_OPTIMIZATION_PHASE2_COMPLETE.md  DNS_STABILITY_OPTIMIZATION_PLAN.md  DNS_STABILITY_OPTIMIZATION_SUMMARY.md  DNS_UI_INTEGRATION_COMPLETE.md  DNS_ZERO_LEAK_PROTECTION.md  DNS_ZERO_LEAK_QUICK_START.md  DOH_DOT_IMPLEMENTATION_COMPLETE.md  EMOTION_STYLE_INJECTION_FIX.md  ENHANCED_CANVAS_TRAFFIC_GRAPH_REFACTOR_COMPLETE.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_REVIEW_CHECKLIST.md  FINAL_SUMMARY.md  FIX_SESSION_SUMMARY.md  FONT_CONFIGURATION_GUIDE.md  (+140 more)
crates/clash-dtos/: Cargo.toml  package.json
crates/clash-dtos/bindings/: BaseConfig.ts  ConnTrafficSnapshot.ts  Connection.ts  DnsMetrics.ts  DnsPollutedEntry.ts  DnsPollutionStats.ts  DnsQueryEvent.ts  DnsQueryStats.ts  DnsServerStats.ts  EngineStats.ts  HotReloadStatus.ts  RuleExtra.ts  RuleTrafficSnapshot.ts  SizeClassStats.ts  TLSRotationResult.ts
crates/clash-dtos/src/: lib.rs
crates/clash-verge-logger/: Cargo.toml
crates/clash-verge-logger/src/: lib.rs
crates/clash-verge-logging/: Cargo.toml
crates/clash-verge-logging/src/: lib.rs
crates/clash-verge-service-ipc/: Cargo.toml
crates/clash-verge-service-ipc/resources/: info.plist.tmpl  installer.nsi  launchd.plist.tmpl  systemd_service_unit.tmpl
crates/clash-verge-service-ipc/src/: lib.rs  macos_legacy_migration.rs  macos_service_identity.rs
crates/clash-verge-xdp/xdp-ebpf/: Cargo.toml
crates/clash-verge-xdp/xdp-userspace/: Cargo.toml
crates/learn-gripe/: Cargo.toml
crates/learn-gripe/src/: address.rs  config.rs  conntrack.rs  delay.rs  dns.rs  http.rs  http2.rs  httpupgrade.rs  lib.rs  obfuscation.rs  outbound.rs  proxy.rs  router.rs  server.rs  shadowsocks.rs  socks5.rs  tls.rs  transport.rs  trojan.rs  tun.rs  udp.rs  vision.rs  vless.rs  vmess.rs  ws.rs  xhttp.rs
crates/learn-gripe/tests/: anytls_outbound.rs  anytls_udp_outbound.rs  connection_controller.rs  delay.rs  dns.rs  fakeip_routing.rs  gost_relay_outbound.rs  http_inbound.rs  http_outbound.rs  hysteria2_obfs.rs  hysteria2_outbound.rs  hysteria2_udp_outbound.rs  hysteria2_zero_rtt.rs  hysteria_outbound.rs  masque_udp_outbound.rs  mieru_outbound.rs  proxy_schema.rs  router_outbound.rs  shadowsocks2022_outbound.rs  shadowsocks2022_udp.rs  shadowsocks_obfs_tls.rs  shadowsocks_outbound.rs  shadowsocks_plugin.rs  shadowsocks_udp.rs  snell_obfs.rs  snell_outbound.rs  snell_reuse.rs  snell_udp.rs  snell_v4.rs  snell_v4_reuse.rs  snell_v4_udp.rs  socks5_relay.rs  ssh_outbound.rs  ssr_outbound.rs  ssr_udp.rs  trojan_outbound.rs  trojan_udp.rs  tuic_outbound.rs  tuic_pool.rs  tuic_quic_udp_outbound.rs  (+10 more)
src-tauri/: Cargo.toml  build.rs  compatibility-boundaries.md  tauri.conf.json  tauri.linux.conf.json  tauri.local.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json  webview2.x86.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: constants.rs  lib.rs
src-tauri/src/anti_probe/: mod.rs
src-tauri/src/app/: config.rs  mod.rs  profile.rs  runtime.rs  subscription.rs  system.rs  window.rs
src-tauri/src/cmd/: anti_probe.rs  app.rs  app_runtime.rs  blackhole_breaker.rs  china_rules.rs  clash.rs  config_explain.rs  coordinator.rs  dns.rs  egress_identity.rs  egress_monitor.rs  http.rs  identity_consistency.rs  ip_reputation.rs  latency_test.rs  mod.rs  multipath.rs  node_selection.rs  profile.rs  proxy.rs  rule_engine.rs  runtime.rs  save_profile.rs  security.rs  security_policy.rs  session_affinity.rs  subscription.rs  system.rs  timezone_spoof.rs  tls_fingerprint.rs  tor.rs  traffic.rs  uwp.rs  validate.rs  verge.rs  xdp.rs
src-tauri/src/config/: advanced.rs  clash.rs  config.rs  dns_defaults.rs  mod.rs  prfitem.rs  profiles.rs  runtime.rs  traits.rs  verge.rs
src-tauri/src/core/: app_runtime.rs  asn_classifier.rs  autostart.rs  backup.rs  blackhole_breaker.rs  clash_mode.rs  config_explain.rs  connection_metrics.rs  connection_monitor.rs  coordinator.rs  coordinator_status.rs  current_egress_identity.rs  dns_config_explain.rs  dns_runtime.rs  egress_identity.rs  geo_update.rs  handle.rs  hotkey.rs  identity_consistency.rs  ip_intelligence.rs  ip_reputation.rs  kernel_runtime.rs  latency_test.rs  log_monitor.rs  log_stream.rs  logger.rs  mihomo_runtime_guard.rs  mod.rs  native_config_validator.rs  node_selection.rs  notification.rs  process_lookup.rs  provider_update.rs  residential_verification.rs  rule_engine.rs  rule_geodata.rs  runtime_bridge.rs  runtime_diagnostics.rs  runtime_lifecycle.rs  runtime_rule_control.rs  (+16 more)
src-tauri/src/enhance/: blackhole_breaker.rs  chain.rs  china_rules.rs  connection_stability.rs  field.rs  mod.rs  obfuscation.rs  proxy_cleanup.rs  region_pools.rs  script.rs  sniffer.rs  stable_egress.rs  subscription_update.rs  timezone_spoof.rs  tls_fingerprint.rs  traffic_obfuscation.rs  tun.rs
src-tauri/src/feat/: anti_probe.rs  backup.rs  blackhole_breaker.rs  china_rules.rs  clash.rs  config.rs  coordinator.rs  egress_identity.rs  egress_monitor.rs  icon.rs  ip_reputation.rs  mod.rs  multipath.rs  profile.rs  proxy.rs  save_profile.rs  security_policy.rs  session_affinity.rs  timezone_spoof.rs  tls_fingerprint.rs  (+3 more)
src-tauri/target-unify-check/: .rustc_info.json
src-tauri/target-unify-check-serial/: .rustc_info.json
(+3494 files in other folders)
