[package]
name = "clash-verge-optimized"
version = "0.0.5"
description = "clash verge optimized"
authors = ["zzzgydi", "Tunglies", "wonfen", "MystiPanda"]
license = "GPL-3.0-only"
repository = "https://github.com/tanzanite2025/clash-verge-optimized.git"
default-run = "clash-verge-optimized"
build = "build.rs"
edition = "2024"
rust-version = "1.95"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = ["clash_verge_logger/color"]
tauri-dev = []
tokio-trace = ["console-subscriber"]
clippy = ["tauri/test"]
tracing = []

[package.metadata.bundle]
identifier = "io.github.tanzanite2025.clash-verge-optimized"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
clash-verge-draft = { workspace = true }
clash-verge-logging = { workspace = true }
clash-verge-signal = { workspace = true }
clash-verge-i18n = { workspace = true }
clash-verge-limiter = { workspace = true }
tauri-plugin-clash-verge-sysinfo = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri = { workspace = true, features = [
  "protocol-asset",
  "devtools",
  "tray-icon",
  "image-ico",
  "image-png",
] }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
compact_str = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
bitflags = { workspace = true }
thiserror = "2"
warp = { version = "0.4.3", features = ["server"] }
open = "5.3.5"
dunce = "1.0.5"
nanoid = "0.5"
chrono = "0.4.44"
boa_engine = "0.21.1"
once_cell = { version = "1.21.4", features = ["parking_lot"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.3", features = [
  "json",
  "cookies",
  "gzip",
  "rustls",
  "socks",
  "form",
] }
regex = "1.12.3"
sysproxy = { workspace = true, features = [
  "guard",
] }
network-interface = { version = "2.0.5", features = ["serde"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-window-state = "2.4.1"
zip = "8.6.0"
reqwest_dav = "0.3.3"
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
getrandom = "0.4.2"
futures = "0.3.32"
gethostname = "1.1.0"
scopeguard = "1.2.0"
tauri-plugin-notification = "2.3.3"
tokio-stream = "0.1.18"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
tauri-plugin-http = "2.5.9"
console-subscriber = { version = "0.5.0", optional = true }
tauri-plugin-devtools = { version = "2.1.0" }
tauri-plugin-mihomo = { workspace = true }
clash_verge_logger = { workspace = true }
async-trait = "0.1.89"
clash_verge_service_ipc = { workspace = true, features = [
  "client",
] }
arc-swap = "1.9.1"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.40", features = ["ring"] }
webpki-roots = "1.0.7"
rust_iso3166 = "0.1.14"
# Use the git repo until the next release after v2.0.0.
dark-light = { git = "https://github.com/rust-dark-light/dark-light" }
bytes = "1.11.1"
tokio-util = { version = "0.7.18", features = ["time"] }
# DNS resolver with DoH/DoT support
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dnssec-ring"] }
hickory-proto = "0.24"
# Anti-probe and TLS fingerprinting
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
maxminddb = "0.28.1"
prost = "0.14.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
  "NSString",
  "NSDictionary",
  "NSAttributedString",
] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSAttributedString",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "NSFont",
  "NSFontDescriptor",
  "NSColor",
  "NSParagraphStyle",
  "NSStringDrawing",
  "NSText",
] }

[target.'cfg(windows)'.dependencies]
deelevate = { workspace = true }
runas = "=1.2.0"
winreg = "0.56.0"
webview2-com = "0.38.2"
windows-core-webview2 = { package = "windows-core", version = "0.61.2" }
windows = { version = "0.62.2", features = ["Win32_Globalization", "Win32_System_Console"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[lints]
workspace = true
