[package]
name = "clash-verge-logging"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
compact_str = { workspace = true }
flexi_logger = { workspace = true }
arraydeque = "0.5"
nu-ansi-term = { version = "0.50", optional = true }

[features]
default = []
color = ["nu-ansi-term"]
