[package]
name = "learn-gripe"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23.20", default-features = false, features = ["ring", "tls12", "std", "logging"] }
webpki-roots = { version = "0.26.7" }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
h2 = { version = "0.4.13" }
http = { version = "1.4.0" }
bytes = { version = "1.11.1" }
sha2 = { version = "0.10.9" }
sha1 = { version = "0.10.6" }
md-5 = { version = "0.10.6" }
aes = { version = "0.8.4" }
aes-gcm = { version = "0.10.3" }
chacha20poly1305 = { version = "0.10.1" }
# RFC 9180 HPKE building blocks for Encrypted Client Hello (ECH). rustls only
# ships an HPKE backend under aws-lc-rs (C toolchain); we run the pure-Rust ring
# backend, so the kernel composes its own `Hpke` provider from these vetted
# primitives (X25519 key agreement + HKDF-SHA256), reusing the AEAD crates above.
hkdf = { version = "0.12.4" }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["precomputed-tables", "alloc"] }
# BLAKE3 key-derivation for the Shadowsocks 2022 (`2022-blake3-*`) session
# subkey: `derive_key("shadowsocks 2022 session subkey", PSK || salt)`. Pure-Rust
# build (no C/asm toolchain) for clean cross-compilation.
blake3 = { version = "1.5.5", default-features = false }
crc32fast = { version = "1.5.0" }
getrandom = { version = "0.3.4" }
# DNS wire-format parse/serialize for the kernel DNS server. We own the product
# logic (fake-ip allocation, mapping, upstream selection); message codec is
# delegated to this vetted crate (already used by src-tauri via hickory 0.24).
hickory-proto = { version = "0.24", default-features = false }
# Userspace IP/TCP stack primitive for the TUN inbound (analogous to adopting
# rustls for TLS). We own the orchestration (read packets, demux flows, bridge
# to the outbound pipeline); smoltcp provides only the packet wire codec and
# per-flow TCP state machine. `medium-ip` = no Ethernet framing (raw L3, as a
# TUN device delivers).
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }
# QUIC data plane for the TUIC outbound (and, later, Hysteria2 / MASQUE). quinn
# drives the QUIC state machine + UDP I/O; it layers on the same vendored rustls
# fork we already use (the workspace patch redirects `rustls` to it), with the
# pure-Rust `ring` provider — no aws-lc-rs/C toolchain. `platform-verifier` is
# left off because the kernel supplies its own certificate verification.
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
# A second smoltcp stack drives a real client TCP handshake through the
# in-memory TUN pipe in tests/tun_inbound.rs.
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
rustls-pemfile = "2.2.0"
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
h2 = { version = "0.4.13" }
http = { version = "1.4.0" }
bytes = { version = "1.11.1" }
# Crypto crates for the fake VMess / Shadowsocks servers in the outbound
# integration tests (independent server-side AEAD implementations that prove
# end-to-end interop).
sha2 = { version = "0.10.9" }
sha1 = { version = "0.10.6" }
md-5 = { version = "0.10.6" }
aes-gcm = { version = "0.10.3" }
chacha20poly1305 = { version = "0.10.1" }
blake3 = { version = "1.5.5", default-features = false }
crc32fast = { version = "1.5.0" }
# DNS message build/parse for the fake upstream DNS server in tests/dns.rs.
hickory-proto = { version = "0.24", default-features = false }

[lints]
workspace = true
