[package]
name = "xdp-userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
anyhow = "1.0"
tokio = { version = "1.25", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"

[lib]
name = "xdp_userspace"
path = "src/lib.rs"

[[bin]]
name = "xdp-proxy"
path = "src/main.rs"
